<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.geotdb.compile.view.MaterialBetterSpinner
        android:id="@+id/sprKwzc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_kwzc"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_kwzc"
        app:met_iconLeft="@drawable/ai_icon_kwzucheng" />

    <com.geotdb.compile.view.MaterialBetterSpinner
        android:id="@+id/sprYs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_ys"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_ys"
        app:met_iconLeft="@drawable/ai_icon_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.geotdb.compile.view.MaterialBetterSpinner
            android:id="@+id/sprKljp"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_kljp"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_kljp"
            app:met_iconLeft="@drawable/ai_icon_kljipei" />

        <com.geotdb.compile.view.MaterialBetterSpinner
            android:id="@+id/sprMsd"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_msd"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_msd"
            app:met_iconLeft="@drawable/ai_icon_mishidu" />

    </LinearLayout>

    <com.geotdb.compile.view.MaterialBetterSpinner
        android:id="@+id/sprKlxz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_klxz"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_klxz"
        app:met_iconLeft="@drawable/ai_icon_klxingzhuang" />

    <com.geotdb.compile.view.MaterialBetterSpinner
        android:id="@+id/sprSd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_sd"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_sd"
        app:met_iconLeft="@drawable/ai_icon_shidu" />


</LinearLayout>
