<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.geotdb.compile.view.MaterialBetterSpinner
            android:id="@+id/sprYs"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_ys"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_ys"
            app:met_iconLeft="@drawable/ai_icon_color" />

        <com.geotdb.compile.view.MaterialBetterSpinner
            android:id="@+id/sprZt"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_zt"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_zt"
            app:met_iconLeft="@drawable/ai_icon_zhuangtai" />
    </LinearLayout>


    <com.geotdb.compile.view.MaterialBetterSpinner
        android:id="@+id/sprBhw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_bhw"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_bhw"
        app:met_iconLeft="@drawable/ai_icon_goods" />

    <com.geotdb.compile.view.MaterialBetterSpinner
        android:id="@+id/sprFtfchd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_ftfchd"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_ftfchd"
        app:met_iconLeft="@drawable/ai_icon_fencengh" />


    <com.geotdb.compile.view.MaterialBetterSpinner
        android:id="@+id/sprFzntfchd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_record_layer_fzntfchd"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/label_record_layer_fzntfchd"
        app:met_iconLeft="@drawable/ai_icon_fencengh" />

</LinearLayout>
