<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.geotdb.compile.view.MaterialBetterSpinner
            android:id="@+id/sprYs"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_ys"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_ys"
            app:met_iconLeft="@drawable/ai_icon_color"/>

        <com.geotdb.compile.view.MaterialBetterSpinner
            android:id="@+id/sprJycd"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_jycd"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_jycd"
            app:met_iconLeft="@drawable/ai_icon_jianying"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.geotdb.compile.view.MaterialBetterSpinner
            android:id="@+id/sprWzcd"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_wzcd"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_wzcd"
            app:met_iconLeft="@drawable/ai_icon_wanzhengdu"/>

        <com.geotdb.compile.view.MaterialBetterSpinner
            android:id="@+id/sprJbzldj"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_jbzldj"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_jbzldj"
            app:met_iconLeft="@drawable/ai_icon_tuquite"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.geotdb.compile.view.MaterialBetterSpinner
            android:id="@+id/sprFhcd"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_fhcd"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_fhcd"
            app:met_iconLeft="@drawable/ai_icon_fenghua"/>

        <com.geotdb.compile.view.MaterialBetterSpinner
            android:id="@+id/sprKwx"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_record_layer_kwx"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_kwx"
            app:met_iconLeft="@drawable/ai_icon_kewax"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.geotdb.compile.view.MaterialBetterSpinner
            android:id="@+id/sprJglx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_record_layer_jglx"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/label_record_layer_jglx"
            app:met_iconLeft="@drawable/ai_icon_jgtype"/>
    </LinearLayout>
</LinearLayout>
